# langgraph-smart-faq-wokflow

./: .gitignore  README.md  blog_post.md  demo07.py  main.py  pyproject.toml  run_workflow.py
agents/: code_agent.py  prompt_agent.py
core/: llm.py  tracing.py
tools/: math_tools.py  search_tools.py
workflow/graph/: __init__.py  simple_assistant_graph.py
workflow/nodes/: __init__.py  simple_assistant_nodes.py
workflow/routes/: __init__.py  simple_assistant_routes.py
workflow/simple_assistant/: __init__.py
workflow/states/: __init__.py  simple_assistant_state.py
